[add] eliminar comprobante y actualizar Comp Header

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -39,7 +39,7 @@
           </td>
           <td class="align-middle">
             <em style="font-size:15px" class="fas fa-trash"
-              (click)="eliminarComprobante(item.preliminar_id, item.documento_cfdi_id)"></em>
+              (click)="eliminarComprobante(item.preliminar_id, item.documento_cfdi_id, item.preliminar_detalle_id)"></em>
           </td>
         </tr>
         <!-- </ng-container> -->
