--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -32,9 +32,9 @@
     </div>
 
     <div class="col-md-3">
-      <label for="numero_comprobante">Número Comprobante <span class="requerido">*</span></label>
-      <input type="text" name="numero_comprobante" id="numero_comprobante'" maxlength="25" class="form-control"
-        formControlName="numero_comprobante" placeholder="Número Comprobante">
+      <label for="uuid">Número Comprobante <span class="requerido">*</span></label>
+      <input type="text" name="uuid" id="uuid'" maxlength="25" class="form-control" formControlName="uuid"
+        placeholder="Número Comprobante">
     </div>
 
     <div class="col-md-3">
@@ -74,7 +74,7 @@
             <th scope="col">Valor Unitario</th>
             <th scope="col">Cantidad</th>
             <th scope="col">Importe</th>
-            <th style="width: 250px;" scope="col">Concepto</th>
+            <th style="width: 150px;" scope="col">Concepto</th>
             <th scope="col">Monto a Reembolsar</th>
             <th scope="col">Aplica</th>
             <th scope="col">Acciones</th>
