[upd] mostrar datos en modal comprobante GV

--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -50,8 +50,8 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <div class="form-group">
-          <label for="descripcion_motivo">Motivo <span class="requerido">*</span></label>
-          <textarea class="form-control" formControlName="motivo" maxlength="500" id="descripcion_motivo" rows="3"
+          <label for="motivo">Motivo <span class="requerido">*</span></label>
+          <textarea class="form-control" formControlName="motivo" maxlength="500" id="motivo" rows="3"
             [(ngModel)]="header_comprobante.motivo"></textarea>
         </div>
       </div>
