--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
@@ -98,7 +98,6 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-12">
               <label for="forma_pago">Forma de Pago <span class="requerido">*</span> </label>
-              <!-- [ngClass]="{'select2-container': form_forma_pago.status === 'INVALID' }" -->
               <select2 [data]="lista_forma_pago" [options]="{placeholder: 'Seleccione Forma de Pago'}"
                 (valueChanged)="onFormaPagoSelect($event)" name="forma_pago" id="forma_pago">
               </select2>
@@ -111,7 +110,7 @@
   <div class="row">
     <div class="col-12">
       <app-tabla-conceptos-form [conceptos]="comprobante.conceptos" [lista_cuentas]="lista_cuentas"
-        (onCancelar)="cancelar()" (onAgregar)="agregarConceptos($event)">
+        (onCancelar)="cancelar()" (onAgregar)="agregarConceptos($event)" [forma_pago]="this.comprobante.forma_pago">
       </app-tabla-conceptos-form>
     </div>
   </div>
