[add]  rfc carga comprobante extranjero

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -20,9 +20,14 @@
       </div>
     </div>
     <div class="col-md-3">
-      <label for="nombre_proveedor">Nombre Proveedor <span class="requerido">*</span></label>
-      <input type="text" name="nombre_proveedor" id="nombre_proveedor'" maxlength="100" class="form-control"
+      <label for="razon_social">Nombre Proveedor <span class="requerido">*</span></label>
+      <input type="text" name="razon_social" id="razon_social'" maxlength="100" class="form-control"
         formControlName="razon_social" placeholder="Nombre Proveedor">
+    </div>
+    <div class="col-md-3">
+      <label for="rfc_proveedor">RFC Proveedor <span class="requerido">*</span></label>
+      <input type="text" name="rfc_proveedor" id="rfc_proveedor'" maxlength="15" class="form-control"
+        formControlName="rfc_proveedor" placeholder="Nombre Proveedor">
     </div>
     <div class="col-md-3">
       <label for="nombre">Fecha Comprobante <span class="requerido">*</span></label>
