[fix] aplica comproabnte

--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -24,7 +24,6 @@
           <th scope="col">Comprobante Fiscal</th>
           <th scope="col">Impuestos</th>
           <th scope="col">Anexos</th>
-          <th scope="col">Adicional</th>
           <th scope="col">Aplica</th>
         </tr>
       </thead>
@@ -78,12 +77,7 @@
             </button>
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary btn-sm" (click)="modal('adicionales')">
-              <em class="fa fa-file-archive"></em>
-            </button>
-          </th>
-          <th class="text-center" scope="">
-            <input type="checkbox" class="mx-auto" formControlName="aplica">
+            <input type="checkbox" class="mx-auto" (change)="onChangeAplica( $event.target)">
           </th>
 
         </tr>
