[upd] se cambio sharedmodule por compartidosmodule

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -55,6 +55,11 @@
         (valueChanged)="onMonedaSeleccionado($event)" name="selec_moneda_gasto_viaje" id="selec_moneda_gasto_viaje">
       </select2>
     </div>
+    <div class="col-md-3">
+      <label for="tipo_cambio">Tipo de Cambio <span class="requerido">*</span></label>
+      <input numbersWidthDots type="text" name="tipo_cambio" id="tipo_cambio'" maxlength="25" class="form-control"
+        formControlName="tipo_cambio" placeholder="Número Comprobante">
+    </div>
   </div>
   <!-- Fin del Header del comprobante -->
 
