--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -16,10 +16,10 @@
           <th scope="col" style="width: 150px;">Descripción</th>
           <th scope="col">Unidad</th>
           <th scope="col">Valor Unitario</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">Importe</th>
+          <th style="width: 90px;" scope="col">Cantidad</th>
+          <th style="width: 150px;" scope="col">Importe</th>
           <th style="width: 250px;" scope="col">Concepto</th>
-          <th scope="col">Monto a Reembolsar</th>
+          <th style="width: 120px;" scope="col">Monto a Reembolsar</th>
           <th style="width: 150px;" scope="col">Observación</th>
           <th scope="col">Comprobante Fiscal</th>
           <th scope="col">Impuestos</th>
