ajustes de titulo reembolso, nodo destino gastos de viaje disable continuacion nulo

--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
@@ -1,5 +1,6 @@
 <app-form-comprobacion-header (onContinuar)="guardarFormHeader($event)" (onCancelar)="cancelar()"
-  [numero_comprobacion]="numero_comprobacion" [comprobacion_header]="comprobacion_header" [usuario]="usuario">
+  [numero_comprobacion]="numero_comprobacion" [comprobacion_header]="comprobacion_header" [usuario]="usuario"
+  [title]="title">
 </app-form-comprobacion-header>
 
 <!-- Carga de Documentos -->
