--- a/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-main/otros-gastos-main.component.html
+++ b/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-main/otros-gastos-main.component.html
@@ -5,7 +5,7 @@
     </li>
     <li class="breadcrumb-item active">Otros Gastos</li>
   </ol>
-  <h1 class="page-header">Otros Gastos<small></small></h1>
+  <h1 class="page-header">Comprobar Otros Gastos<small></small></h1>
   <div class="col-md-12">
     <router-outlet></router-outlet>
   </div>
