[add] funcionalidad actualizar conceptos

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -57,8 +57,8 @@
     </div>
     <div class="col-md-3">
       <label for="tipo_cambio">Tipo de Cambio <span class="requerido">*</span></label>
-      <input numbersWidthDots type="text" name="tipo_cambio" id="tipo_cambio'" maxlength="25" class="form-control"
-        formControlName="tipo_cambio" placeholder="Número Comprobante">
+      <input currencyMask type="text" name="tipo_cambio" id="tipo_cambio'" maxlength="25" class="form-control"
+        formControlName="tipo_cambio" placeholder="Tipo de Cambio">
     </div>
   </div>
   <!-- Fin del Header del comprobante -->
