--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -85,4 +85,6 @@
 </div>
 
 <!-- Modal Conceptos Comprobantes -->
-<app-modal-conceptos-comprobantes [comprobante]="comprobante"></app-modal-conceptos-comprobantes>
+<app-modal-conceptos-comprobantes #modalConceptos [comprobante]="comprobante"
+  (onGuardarConceptos)="onActualizarComprobantes($event)">
+</app-modal-conceptos-comprobantes>
