ajuste de modal detalle conceptos control de reembolso y de boton guardar

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -86,5 +86,5 @@
 
 <!-- Modal Conceptos Comprobantes -->
 <app-modal-conceptos-comprobantes #modalConceptos [comprobante]="comprobante"
-  (onGuardarConceptos)="onActualizarComprobantes($event)">
+  (onGuardarConceptos)="onActualizarComprobantes($event)" [lista_cuentas]="lista_cuentas">
 </app-modal-conceptos-comprobantes>
