--- a/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
+++ b/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
@@ -125,7 +125,7 @@
                           <th class="text-right" scope="">
                             <input currencyMask [options]="{ thousands: ',', decimal: '.' }"
                               formControlName="monto_rembolsar" type="text" name="linea_detalle" maxlength="20"
-                              class="form-control">
+                              class="form-control" (keyup)="cambiarEstatusTotalModificado(i)">
                           </th>
                           <th class="text-right" scope="">
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" maxlength="500"
