--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -49,6 +49,11 @@
         </select2>
       </div>
 
+      <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+        <label for="tipo_cambio">Tipo Cambio<span class="requerido">*</span></label>
+        <input currencyMask type="text" formControlName="tipo_cambio" maxlength="10"
+          [(ngModel)]="header_comprobante.tipo_cambio" class="form-control" id="tipo_cambio">
+      </div>
       <div *ngIf="title === 'Gastos de Viaje'" class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <label for="destino">Destino<span class="requerido">*</span></label>
         <input type="text" formControlName="destino" maxlength="50" [(ngModel)]="header_comprobante.descripcion"
@@ -61,9 +66,8 @@
             [(ngModel)]="header_comprobante.motivo"></textarea>
         </div>
       </div>
-
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
-        <div class="switcher p-t-10">
+        <div class="switcher">
           <input type="checkbox" formControlName="recuperable" [(ngModel)]="header_comprobante.recuperable" id="activo"
             name="activo" />
           <label for="activo">Recuperable</label>
@@ -76,7 +80,8 @@
     <div class="col  text-right ">
       <button *ngIf="!numero_comprobacion" type="button" (click)="cancelarComprobacion()"
         class="btn btn-danger ml-auto mr-2">Cancelar</button>
-      <button [disabled]="(!formulario_header.valid || numero_comprobacion) &&  !header_comprobante.id" type="submit"
+      <button *ngIf="header_comprobante!.estatus!.toLowerCase() == 'borrador' || !header_comprobante.estatus"
+        [disabled]="(!formulario_header.valid || numero_comprobacion) &&  !header_comprobante.id" type="submit"
         class="btn btn-primary ml-auto">Continuar</button>
     </div>
   </div>
