--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -13,14 +13,14 @@
       <caption style="display: none;"></caption>
       <thead>
         <tr>
-          <th scope="col" style="width: 150px;">Descripción</th>
-          <th scope="col">Unidad</th>
-          <th scope="col">Valor Unitario</th>
-          <th style="width: 90px;" scope="col">Cantidad</th>
+          <th scope="col" style="width: 150px;">Descripción <span class="text-danger">*</span> </th>
+          <th scope="col">Unidad <span class="text-danger">*</span></th>
+          <th scope="col">Valor Unitario <span class="text-danger">*</span></th>
+          <th style="width: 90px;" scope="col">Cantidad <span class="text-danger">*</span></th>
           <th style="width: 150px;" scope="col">Importe</th>
-          <th style="width: 250px;" scope="col">Concepto</th>
-          <th style="width: 120px;" scope="col">Monto a Reembolsar</th>
-          <th style="width: 150px;" scope="col">Observación</th>
+          <th style="width: 250px;" scope="col">Concepto<span class="text-danger">*</span></th>
+          <th style="width: 120px;" scope="col">Monto a Reembolsar<span class="text-danger">*</span></th>
+          <th style="width: 150px;" scope="col">Observación <span class="text-danger">*</span></th>
           <th scope="col">Comprobante Fiscal</th>
           <th scope="col">Impuestos</th>
           <th scope="col">Anexos</th>
