[fix] moneda en editar borrador

--- a/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
+++ b/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
@@ -40,7 +40,7 @@
           </thead>
           <tbody>
             <tr>
-              <td></td>
+              <td> <button (click)="setExpand()"></button> </td>
               <td>Estatus</td>
               <td>Fecha</td>
               <td>Forma de PAgo</td>
