[add] efectivo preseleccionado

--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -21,7 +21,7 @@
     <div class="switcher p-t-10">
       <input type="checkbox" id="nacional" (change)="onNacionalChange($event.target)" [checked]="is_nacional"
         name="nacional" />
-      <label for="nacional">Extranjero / Nacional</label>
+      <label id="lbl-nacional" for="nacional">Extranjero / Nacional</label>
     </div>
   </div>
 </div>
@@ -43,7 +43,8 @@
 <app-lista-comprobantes-carga *ngIf="numero_comprobacion" [lista_comprobaciones]="lista_comprobantes"
   [comprobante]="comprobacion_header" [numero_comprobacion]="numero_comprobacion" [totales]="totales"
   (onEliminarComprobante)="eliminarComprobante($event)" (onCancelar)="cancelar()" (onComprobar)="comprobar()"
-  (onEliminarComprobacion)="eliminarComprobacion()" [lista_cuentas]="lista_cuentas">
+  (onEliminarComprobacion)="eliminarComprobacion()" [lista_cuentas]="lista_cuentas"
+  (onActualizarConceptosSuccess)="this.obtenerComprobacion()">
   <!-- (onActualizarConceptosSuccess)="this.obtenerComprobacion()"> -->
 </app-lista-comprobantes-carga>
 
