--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
@@ -98,9 +98,14 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-12">
               <label for="forma_pago">Forma de Pago <span class="requerido">*</span> </label>
-              <select2 [data]="lista_forma_pago" [options]="{placeholder: 'Seleccione Forma de Pago'}"
+              <!-- <select2 [data]="lista_forma_pago" [options]="{placeholder: 'Seleccione Forma de Pago'}"
                 (valueChanged)="onFormaPagoSelect($event)" name="forma_pago" id="forma_pago">
-              </select2>
+              </select2> -->
+              <select class="form-control" [(ngModel)]="comprobante.forma_pago" id="tipo_comprobacion"
+                aria-placeholder="Seleccione tipo de comprobante">
+                <option *ngFor="let item of lista_forma_pago" [value]="item.id"
+                  [attr.selected]="item.id == comprobante.forma_pago ? true : null"> {{ item.text }} </option>
+              </select>
             </div>
           </div>
         </div>
