--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-9 table-responsive">
+  <div class="col-md-9 table-responsive mh-500">
     <table class="table hover table-striped table-hover table-fixed dataTables_scrollBody">
       <caption></caption>
       <thead>
