--- a/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
+++ b/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
@@ -75,7 +75,7 @@
         </ng-container>
 
         <ng-container>
-          <div class="row">
+          <div class="row mh-40vh">
             <div class="col-md-12">
               <div class="panel panel-inverse">
                 <div class="panel-heading">
@@ -99,7 +99,7 @@
                           <th scope="col">Aplica</th>
                         </tr>
                       </thead>
-                      <tbody formArrayName="conceptos">
+                      <tbody *ngIf="comprobante.conceptos.length" formArrayName="conceptos">
                         <tr [formGroupName]="i" *ngFor="let item of controlsMain.conceptos.controls; let i = index">
                           <th scope="">
                             {{ comprobante.conceptos[i].concepto }}
