[add] siempre aplica comprobacion papel

--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -77,7 +77,8 @@
             </button>
           </th>
           <th class="text-center" scope="">
-            <input type="checkbox" class="mx-auto" (change)="onChangeAplica( $event.target)">
+            <input type="checkbox" class="mx-auto" checked formControlName="aplica"
+              (change)="onChangeAplica( $event.target)">
           </th>
 
         </tr>
